// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/LogFace extended filters work correctly for Nutrition: risk filter 1`] = `
<select
  data-testid="select"
  onChange={[Function]}
>
  <option
    key="stunting"
    value="stunting"
  >
    Stunting
  </option>
  <option
    key="wasting"
    value="wasting"
  >
    Wasting
  </option>
  <option
    key="overweight"
    value="overweight"
  >
    Overweight
  </option>
  <option
    key="inappropriateFeeding"
    value="inappropriateFeeding"
  >
    Inappropriate Feeding
  </option>
  <option
    key="underweight"
    value="underweight"
  >
    Underweight
  </option>
  <option
    key="normal"
    value="normal"
  >
    Normal
  </option>
</select>
`;

exports[`containers/LogFace extended filters work correctly for Nutrition: smsType filter 1`] = `
<select
  data-testid="select"
  onChange={[Function]}
>
  <option
    key="Response Report"
    value="Response Report"
  >
    Response Report
  </option>
  <option
    key="Red Alert Report"
    value="Red Alert Report"
  >
    Red Alert Report
  </option>
  <option
    key="Social Determinants"
    value="Social Determinants"
  >
    Social Determinants
  </option>
  <option
    key="ANC Visit"
    value="ANC Visit"
  >
    ANC Visit
  </option>
  <option
    key="Delivery Planning"
    value="Delivery Planning"
  >
    Delivery Planning
  </option>
  <option
    key="Pregnancy Detection"
    value="Pregnancy Detection"
  >
    Pregnancy Detection
  </option>
  <option
    key="Pregnancy Identification"
    value="Pregnancy Identification"
  >
    Pregnancy Identification
  </option>
  <option
    key="Pregnancy Registration"
    value="Pregnancy Registration"
  >
    Pregnancy Registration
  </option>
  <option
    key="ANC Report"
    value="ANC Report"
  >
    ANC Report
  </option>
  <option
    key="Home Visit Report"
    value="Home Visit Report"
  >
    Home Visit Report
  </option>
  <option
    key="Birth Report"
    value="Birth Report"
  >
    Birth Report
  </option>
  <option
    key="Death Report"
    value="Death Report"
  >
    Death Report
  </option>
  <option
    key="Postnatal and Newborn Care"
    value="Postnatal and Newborn Care"
  >
    Postnatal and Newborn Care
  </option>
  <option
    key="Nutrition Registration"
    value="Nutrition Registration"
  >
    Nutrition Registration
  </option>
  <option
    key="Nutrition Report"
    value="Nutrition Report"
  >
    Nutrition Report
  </option>
  <option
    key="Monthly Nutrition Report"
    value="Monthly Nutrition Report"
  >
    Monthly Nutrition Report
  </option>
  <option
    key="Departure Code"
    value="Departure Code"
  >
    Departure Code
  </option>
  <option
    key="Refusal Report"
    value="Refusal Report"
  >
    Refusal Report
  </option>
  <option
    key="Account Check"
    value="Account Check"
  >
    Account Check
  </option>
</select>
`;

exports[`containers/LogFace extended filters work correctly for pregnancy: location filter 1`] = `
<select
  data-testid="select"
  onChange={[Function]}
>
  <option
    key="c8054fa5-2d63-4cb5-bc52-173a4eb367fd"
    value="c8054fa5-2d63-4cb5-bc52-173a4eb367fd"
  >
    Gia Lai
  </option>
  <option
    key="1b8b7a76-15e1-446b-9d1e-c8cc97777a28"
    value="1b8b7a76-15e1-446b-9d1e-c8cc97777a28"
  >
    Điện Biên
  </option>
  <option
    key="eccfe905-0e03-4188-98bc-22f141cccd0e"
    value="eccfe905-0e03-4188-98bc-22f141cccd0e"
  >
    Kon Tum
  </option>
</select>
`;

exports[`containers/LogFace extended filters work correctly for pregnancy: risk filter 1`] = `
<select
  data-testid="select"
  onChange={[Function]}
>
  <option
    key="risk"
    value="risk"
  >
    Risk
  </option>
  <option
    key="redAlert"
    value="redAlert"
  >
    Red alert
  </option>
  <option
    key="noRisk"
    value="noRisk"
  >
    No risk
  </option>
</select>
`;

exports[`containers/LogFace extended renders correctly: logface title 1`] = `
<h2
  id="logface_title"
>
  Log Face - Pregnancy
</h2>
`;

exports[`containers/LogFace extended renders correctly: search div 1`] = `
<input
  className="form-control logface-search"
  id="search"
  name="input"
  onChange={[Function]}
  placeholder="Search ID, Reporter, Patients"
  type="text"
/>
`;

exports[`containers/LogFace extended renders correctly: table snapshot 1`] = `
<table
  className="table table-borderless table-striped"
>
  <thead
    id="header"
  >
    <tr>
      <th
        className="default-width"
      >
        Event Date
      </th>
      <th
        className="default-width"
      >
        Location
      </th>
      <th
        className="default-width"
      >
        SMS Type
      </th>
      <th
        className="default-width"
      >
        Reporter
      </th>
      <th
        className="default-width"
      >
        Patient
      </th>
      <th
        className="small-width"
      >
        Age
      </th>
      <th
        className="large-width"
      >
        Message
      </th>
      <th
        className="default-width"
      >
        Risk Level
      </th>
    </tr>
  </thead>
  <tbody
    id="body"
  >
    <tr
      key="1616424933508"
    >
      <td
        className="default-width"
      >
        11/06/2021
      </td>
      <td
        className="default-width"
      >
        Thôn Kon Brỏi
      </td>
      <td
        className="default-width"
      >
        Birth Report
      </td>
      <td
        className="default-width"
      >
        Faith Mutua
      </td>
      <td
        className="default-width"
      >
        <Link
          to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        >
          <LinkAnchor
            href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
            navigate={[Function]}
          >
            <a
              href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
              onClick={[Function]}
            >
              101EHA
            </a>
          </LinkAnchor>
        </Link>
      </td>
      <td
        className="small-width"
      >
        35 years
      </td>
      <td
        className="large-width"
      >
        <ul>
          <li
            key="Child DOB : 13/04/2021-0"
          >
            Child DOB : 13/04/2021
          </li>
          <li
            key="Child Gender : NAM-1"
          >
            Child Gender : NAM
          </li>
          <li
            key="Delivery Location : -2"
          >
            Delivery Location : 
          </li>
          <li
            key="Newborn Symptoms : Jaundice (psysiological)-3"
          >
            Newborn Symptoms : Jaundice (psysiological)
          </li>
          <li
            key="Child Weight : 2.8kg-4"
          >
            Child Weight : 2.8kg
          </li>
          <li
            key="Child Length : 48cm-5"
          >
            Child Length : 48cm
          </li>
          <li
            key="Child Risk : no_risk-6"
          >
            Child Risk : no_risk
          </li>
          <li
            key="Breastfeeding : No breastfeeding within 1 hour-7"
          >
            Breastfeeding : No breastfeeding within 1 hour
          </li>
          <li
            key="Mother Symptoms : Light vaginal bleeding-8"
          >
            Mother Symptoms : Light vaginal bleeding
          </li>
        </ul>
      </td>
      <td
        className="default-width"
      >
        <Link
          to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        >
          <LinkAnchor
            href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
            navigate={[Function]}
          >
            <a
              href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
              onClick={[Function]}
            >
              <RiskColoring
                displayValue="No Risk"
                risk="no_risk"
              >
                <span
                  className="badge"
                  style={
                    Object {
                      "backgroundColor": "#28a745",
                    }
                  }
                >
                  <div>
                    <p>
                      No Risk
                    </p>
                  </div>
                </span>
              </RiskColoring>
            </a>
          </LinkAnchor>
        </Link>
      </td>
    </tr>
    <tr
      key="1616424933506"
    >
      <td
        className="default-width"
      >
        11/06/2021
      </td>
      <td
        className="default-width"
      >
        Thôn Kon Brỏi
      </td>
      <td
        className="default-width"
      >
        Delivery Planning
      </td>
      <td
        className="default-width"
      >
        Faith Mutua
      </td>
      <td
        className="default-width"
      >
        <Link
          to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        >
          <LinkAnchor
            href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
            navigate={[Function]}
          >
            <a
              href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
              onClick={[Function]}
            >
              101EHA
            </a>
          </LinkAnchor>
        </Link>
      </td>
      <td
        className="small-width"
      >
        35 years
      </td>
      <td
        className="large-width"
      >
        <ul>
          <li
            key="Planned Delivery Location : At home-0"
          >
            Planned Delivery Location : At home
          </li>
          <li
            key="Current Symptoms : Vomiting-1"
          >
            Current Symptoms : Vomiting
          </li>
        </ul>
      </td>
      <td
        className="default-width"
      >
        <Link
          to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        >
          <LinkAnchor
            href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
            navigate={[Function]}
          >
            <a
              href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
              onClick={[Function]}
            >
              <RiskColoring
                displayValue="Risk"
                risk="risk"
              >
                <span
                  className="badge"
                  style={
                    Object {
                      "backgroundColor": "#ffc107",
                    }
                  }
                >
                  <div>
                    <p>
                      Risk
                    </p>
                  </div>
                </span>
              </RiskColoring>
            </a>
          </LinkAnchor>
        </Link>
      </td>
    </tr>
    <tr
      key="1616424933505"
    >
      <td
        className="default-width"
      >
        11/06/2021
      </td>
      <td
        className="default-width"
      >
        Thôn Kon Brỏi
      </td>
      <td
        className="default-width"
      >
        Social Determinants
      </td>
      <td
        className="default-width"
      >
        Faith Mutua
      </td>
      <td
        className="default-width"
      >
        <Link
          to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        >
          <LinkAnchor
            href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
            navigate={[Function]}
          >
            <a
              href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
              onClick={[Function]}
            >
              101EHA
            </a>
          </LinkAnchor>
        </Link>
      </td>
      <td
        className="small-width"
      >
        35 years
      </td>
      <td
        className="large-width"
      >
        <ul>
          <li
            key="Planned Delivery Location : At home-0"
          >
            Planned Delivery Location : At home
          </li>
          <li
            key="Household : Is a poor household-1"
          >
            Household : Is a poor household
          </li>
          <li
            key="Ethnicity : TAY-2"
          >
            Ethnicity : TAY
          </li>
          <li
            key="Toilet : Has toilet-3"
          >
            Toilet : Has toilet
          </li>
          <li
            key="Handwashing : No Handwashing facilities with soap-4"
          >
            Handwashing : No Handwashing facilities with soap
          </li>
        </ul>
      </td>
      <td
        className="default-width"
      >
        <Link
          to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        >
          <LinkAnchor
            href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
            navigate={[Function]}
          >
            <a
              href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
              onClick={[Function]}
            >
              <RiskColoring
                displayValue="Risk"
                risk="risk"
              >
                <span
                  className="badge"
                  style={
                    Object {
                      "backgroundColor": "#ffc107",
                    }
                  }
                >
                  <div>
                    <p>
                      Risk
                    </p>
                  </div>
                </span>
              </RiskColoring>
            </a>
          </LinkAnchor>
        </Link>
      </td>
    </tr>
    <tr
      key="1616424933504"
    >
      <td
        className="default-width"
      >
        11/06/2021
      </td>
      <td
        className="default-width"
      >
        Thôn Kon Brỏi
      </td>
      <td
        className="default-width"
      >
        Home ANC Visit
      </td>
      <td
        className="default-width"
      >
        Faith Mutua
      </td>
      <td
        className="default-width"
      >
        <Link
          to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        >
          <LinkAnchor
            href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
            navigate={[Function]}
          >
            <a
              href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
              onClick={[Function]}
            >
              101EHA
            </a>
          </LinkAnchor>
        </Link>
      </td>
      <td
        className="small-width"
      >
        35 years
      </td>
      <td
        className="large-width"
      >
        <ul>
          <li
            key="Blood Pressure : 120/80-0"
          >
            Blood Pressure : 120/80
          </li>
          <li
            key="Weight : 70kg-1"
          >
            Weight : 70kg
          </li>
          <li
            key="Current Symptoms : Stomachache,Premature Contraction-2"
          >
            Current Symptoms : Stomachache,Premature Contraction
          </li>
          <li
            key="Supplements : Micronutrients Supplement: Yes-3"
          >
            Supplements : Micronutrients Supplement: Yes
          </li>
        </ul>
      </td>
      <td
        className="default-width"
      >
        <Link
          to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        >
          <LinkAnchor
            href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
            navigate={[Function]}
          >
            <a
              href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
              onClick={[Function]}
            >
              <RiskColoring
                displayValue="Risk"
                risk="risk"
              >
                <span
                  className="badge"
                  style={
                    Object {
                      "backgroundColor": "#ffc107",
                    }
                  }
                >
                  <div>
                    <p>
                      Risk
                    </p>
                  </div>
                </span>
              </RiskColoring>
            </a>
          </LinkAnchor>
        </Link>
      </td>
    </tr>
    <tr
      key="1616424933503"
    >
      <td
        className="default-width"
      >
        11/06/2021
      </td>
      <td
        className="default-width"
      >
        Thôn Kon Brỏi
      </td>
      <td
        className="default-width"
      >
        ANC Visit
      </td>
      <td
        className="default-width"
      >
        Faith Mutua
      </td>
      <td
        className="default-width"
      >
        <Link
          to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        >
          <LinkAnchor
            href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
            navigate={[Function]}
          >
            <a
              href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
              onClick={[Function]}
            >
              101EHA
            </a>
          </LinkAnchor>
        </Link>
      </td>
      <td
        className="small-width"
      >
        35 years
      </td>
      <td
        className="large-width"
      >
        <ul>
          <li
            key="Blood Pressure : 120/80-0"
          >
            Blood Pressure : 120/80
          </li>
          <li
            key="Weight : 69kg-1"
          >
            Weight : 69kg
          </li>
          <li
            key="Current Symptoms : Premature Contraction-2"
          >
            Current Symptoms : Premature Contraction
          </li>
          <li
            key="Supplements : Micronutrients Supplement: Yes-3"
          >
            Supplements : Micronutrients Supplement: Yes
          </li>
        </ul>
      </td>
      <td
        className="default-width"
      >
        <Link
          to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        >
          <LinkAnchor
            href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
            navigate={[Function]}
          >
            <a
              href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
              onClick={[Function]}
            >
              <RiskColoring
                displayValue="Risk"
                risk="risk"
              >
                <span
                  className="badge"
                  style={
                    Object {
                      "backgroundColor": "#ffc107",
                    }
                  }
                >
                  <div>
                    <p>
                      Risk
                    </p>
                  </div>
                </span>
              </RiskColoring>
            </a>
          </LinkAnchor>
        </Link>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`containers/LogFace extended renders correctly: tables 1`] = `
<td
  className="default-width"
>
  11/06/2021
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 2`] = `
<td
  className="default-width"
>
  Thôn Kon Brỏi
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 3`] = `
<td
  className="default-width"
>
  Birth Report
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 4`] = `
<td
  className="default-width"
>
  Faith Mutua
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 5`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        onClick={[Function]}
      >
        101EHA
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 6`] = `
<td
  className="small-width"
>
  35 years
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 7`] = `
<td
  className="large-width"
>
  <ul>
    <li
      key="Child DOB : 13/04/2021-0"
    >
      Child DOB : 13/04/2021
    </li>
    <li
      key="Child Gender : NAM-1"
    >
      Child Gender : NAM
    </li>
    <li
      key="Delivery Location : -2"
    >
      Delivery Location : 
    </li>
    <li
      key="Newborn Symptoms : Jaundice (psysiological)-3"
    >
      Newborn Symptoms : Jaundice (psysiological)
    </li>
    <li
      key="Child Weight : 2.8kg-4"
    >
      Child Weight : 2.8kg
    </li>
    <li
      key="Child Length : 48cm-5"
    >
      Child Length : 48cm
    </li>
    <li
      key="Child Risk : no_risk-6"
    >
      Child Risk : no_risk
    </li>
    <li
      key="Breastfeeding : No breastfeeding within 1 hour-7"
    >
      Breastfeeding : No breastfeeding within 1 hour
    </li>
    <li
      key="Mother Symptoms : Light vaginal bleeding-8"
    >
      Mother Symptoms : Light vaginal bleeding
    </li>
  </ul>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 8`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        onClick={[Function]}
      >
        <RiskColoring
          displayValue="No Risk"
          risk="no_risk"
        >
          <span
            className="badge"
            style={
              Object {
                "backgroundColor": "#28a745",
              }
            }
          >
            <div>
              <p>
                No Risk
              </p>
            </div>
          </span>
        </RiskColoring>
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 9`] = `
<td
  className="default-width"
>
  11/06/2021
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 10`] = `
<td
  className="default-width"
>
  Thôn Kon Brỏi
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 11`] = `
<td
  className="default-width"
>
  Delivery Planning
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 12`] = `
<td
  className="default-width"
>
  Faith Mutua
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 13`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        onClick={[Function]}
      >
        101EHA
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 14`] = `
<td
  className="small-width"
>
  35 years
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 15`] = `
<td
  className="large-width"
>
  <ul>
    <li
      key="Planned Delivery Location : At home-0"
    >
      Planned Delivery Location : At home
    </li>
    <li
      key="Current Symptoms : Vomiting-1"
    >
      Current Symptoms : Vomiting
    </li>
  </ul>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 16`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        onClick={[Function]}
      >
        <RiskColoring
          displayValue="Risk"
          risk="risk"
        >
          <span
            className="badge"
            style={
              Object {
                "backgroundColor": "#ffc107",
              }
            }
          >
            <div>
              <p>
                Risk
              </p>
            </div>
          </span>
        </RiskColoring>
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 17`] = `
<td
  className="default-width"
>
  11/06/2021
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 18`] = `
<td
  className="default-width"
>
  Thôn Kon Brỏi
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 19`] = `
<td
  className="default-width"
>
  Social Determinants
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 20`] = `
<td
  className="default-width"
>
  Faith Mutua
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 21`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        onClick={[Function]}
      >
        101EHA
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 22`] = `
<td
  className="small-width"
>
  35 years
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 23`] = `
<td
  className="large-width"
>
  <ul>
    <li
      key="Planned Delivery Location : At home-0"
    >
      Planned Delivery Location : At home
    </li>
    <li
      key="Household : Is a poor household-1"
    >
      Household : Is a poor household
    </li>
    <li
      key="Ethnicity : TAY-2"
    >
      Ethnicity : TAY
    </li>
    <li
      key="Toilet : Has toilet-3"
    >
      Toilet : Has toilet
    </li>
    <li
      key="Handwashing : No Handwashing facilities with soap-4"
    >
      Handwashing : No Handwashing facilities with soap
    </li>
  </ul>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 24`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        onClick={[Function]}
      >
        <RiskColoring
          displayValue="Risk"
          risk="risk"
        >
          <span
            className="badge"
            style={
              Object {
                "backgroundColor": "#ffc107",
              }
            }
          >
            <div>
              <p>
                Risk
              </p>
            </div>
          </span>
        </RiskColoring>
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 25`] = `
<td
  className="default-width"
>
  11/06/2021
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 26`] = `
<td
  className="default-width"
>
  Thôn Kon Brỏi
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 27`] = `
<td
  className="default-width"
>
  Home ANC Visit
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 28`] = `
<td
  className="default-width"
>
  Faith Mutua
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 29`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        onClick={[Function]}
      >
        101EHA
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 30`] = `
<td
  className="small-width"
>
  35 years
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 31`] = `
<td
  className="large-width"
>
  <ul>
    <li
      key="Blood Pressure : 120/80-0"
    >
      Blood Pressure : 120/80
    </li>
    <li
      key="Weight : 70kg-1"
    >
      Weight : 70kg
    </li>
    <li
      key="Current Symptoms : Stomachache,Premature Contraction-2"
    >
      Current Symptoms : Stomachache,Premature Contraction
    </li>
    <li
      key="Supplements : Micronutrients Supplement: Yes-3"
    >
      Supplements : Micronutrients Supplement: Yes
    </li>
  </ul>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 32`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        onClick={[Function]}
      >
        <RiskColoring
          displayValue="Risk"
          risk="risk"
        >
          <span
            className="badge"
            style={
              Object {
                "backgroundColor": "#ffc107",
              }
            }
          >
            <div>
              <p>
                Risk
              </p>
            </div>
          </span>
        </RiskColoring>
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 33`] = `
<td
  className="default-width"
>
  11/06/2021
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 34`] = `
<td
  className="default-width"
>
  Thôn Kon Brỏi
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 35`] = `
<td
  className="default-width"
>
  ANC Visit
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 36`] = `
<td
  className="default-width"
>
  Faith Mutua
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 37`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        onClick={[Function]}
      >
        101EHA
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 38`] = `
<td
  className="small-width"
>
  35 years
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 39`] = `
<td
  className="large-width"
>
  <ul>
    <li
      key="Blood Pressure : 120/80-0"
    >
      Blood Pressure : 120/80
    </li>
    <li
      key="Weight : 69kg-1"
    >
      Weight : 69kg
    </li>
    <li
      key="Current Symptoms : Premature Contraction-2"
    >
      Current Symptoms : Premature Contraction
    </li>
    <li
      key="Supplements : Micronutrients Supplement: Yes-3"
    >
      Supplements : Micronutrients Supplement: Yes
    </li>
  </ul>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 40`] = `
<td
  className="default-width"
>
  <Link
    to="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
  >
    <LinkAnchor
      href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face/patient_detail/101EHA?module=Pregnancy"
        onClick={[Function]}
      >
        <RiskColoring
          displayValue="Risk"
          risk="risk"
        >
          <span
            className="badge"
            style={
              Object {
                "backgroundColor": "#ffc107",
              }
            }
          >
            <div>
              <p>
                Risk
              </p>
            </div>
          </span>
        </RiskColoring>
      </a>
    </LinkAnchor>
  </Link>
</td>
`;
